--- a/src/app/movies/movie-filter/movie-filter.component.html
+++ b/src/app/movies/movie-filter/movie-filter.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="form"> 
+<form [formGroup]="form">
     <mat-form-field appearance="outline">
         <mat-label>
             Title
@@ -20,6 +20,11 @@
         <mat-checkbox formControlName="inTheatres">In Theatres</mat-checkbox>
     </div>
     <div class="clear-container"><button mat-flat-button (click)="clearForm()" color="warn">Clear</button></div>
-    <app-movies-list [movies]="movies"></app-movies-list>
-    
+    <app-movies-list (onDelete)="onDelete()" [movies]="movies"></app-movies-list>
+    <mat-paginator
+    [length]="totalAmountOfRecords"
+    [pageSize]="recordsPerPage"
+    [pageSizeOptions]="[5,10,20,50]"
+     (page)="paginatorUpdate($event)"
+    ></mat-paginator>
 </form>
