--- a/src/app/actors/form-actor/form-actor.component.html
+++ b/src/app/actors/form-actor/form-actor.component.html
@@ -11,14 +11,13 @@
                     <mat-datepicker #picker></mat-datepicker>
                 </mat-form-field>
                 <h4>Select Picture</h4>
-                <app-input-img 
+                <app-input-img
             [urlCurrentImage]="model?.picture"  (onImageSelected)="onImageSelected($event)"></app-input-img>
-            
-            <!-- <app-input-img 
-                (onImageSelected)="onImageSelected($event)"></app-input-img>
-                -->
+
+
                 <h4>Biography</h4>
-                <app-input-markdown [markdownContent]="model?.biography" (changeMarkdown)="changeMarkdown($event)"></app-input-markdown>
+                <app-input-markdown [markdownContent]="model?.biography" [label]="'Biography'"
+                (changeMarkdown)="changeMarkdown($event)"></app-input-markdown>
 
             <div><button mat-flat-button color="primary" [disabled]="form.invalid">Save Changes</button>
             <a mat-stroked-button routerLink="/actors" >Cancel</a>
