--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,7 @@
-  <h2>In Theatres</h2>
-    <app-movies-list [movies]="moviesInTheaters"></app-movies-list>
-    
-    
+
+<h2>In Theatres</h2>
+    <app-movies-list (onDelete)="onDelete()" [movies]="moviesInTheaters"></app-movies-list>
+
+
     <h2>Future Releases</h2>
-    <app-movies-list [movies]="moviesFutureReleases"></app-movies-list>
+    <app-movies-list (onDelete)="onDelete()" [movies]="moviesFutureReleases"></app-movies-list>
