--- a/src/app/movie-theaters/edit-movie-theater/edit-movie-theater.component.html
+++ b/src/app/movie-theaters/edit-movie-theater/edit-movie-theater.component.html
@@ -1,2 +1,4 @@
 <h2>Edit Movie Theater</h2>
-<app-movie-theater-form [model]="model" (onSaveChanges)="saveChanges($event)"></app-movie-theater-form>
+<app-movie-theater-form
+*ngIf="model" [model]="model" (onSaveChanges)="saveChanges($event)"></app-movie-theater-form>
+<mat-progress-spinner *ngIf="!model"></mat-progress-spinner>
