--- a/src/app/movie-theaters/movie-theater-form/movie-theater-form.component.html
+++ b/src/app/movie-theaters/movie-theater-form/movie-theater-form.component.html
@@ -1,13 +1,19 @@
 <form (submit)="saveChanges()" [formGroup]="form">
     <mat-form-field appearance="outline">
         <mat-label>Name*</mat-label>
-        <input formControlName="name" matInput>
+        <input formControlName="name" matInput />
         <mat-error>The name field is required</mat-error>
     </mat-form-field>
     <h4>Select the location of the theater</h4>
-    <app-map [initialCoordinates]="initialCoordinates" (onSelectedLocation)="onSelectedLocation($event)"></app-map>
+    <div style="position:relative; width: 600px;">
+      <app-map [initialCoordinates]="initialCoordinates" (onSelectedLocation)="onSelectedLocation($event)"></app-map>
+    </div>
+
     <div>
-        <button mat-flat-button color="primary" [disabled]="form.invalid">Save changes</button>
+      <div style="margin-top: 650px;">
+            <button mat-flat-button color="primary" [disabled]="form.invalid">Save changes</button>
         <a mat-stroked-button routerLink="/movie-theaters">Cancel</a>
+      </div>
+
     </div>
 </form>
