--- a/src/app/movies/form-movie/form-movie.component.html
+++ b/src/app/movies/form-movie/form-movie.component.html
@@ -1,7 +1,7 @@
 
 <form (submit)="saveChanges()" [formGroup]="form">
  <mat-form-field appearance="outline">
-  <mat-label>Title </mat-label>   
+  <mat-label>Title </mat-label>
   <input formControlName="title" matInput>
   <mat-error>The title field is required</mat-error>
  </mat-form-field>
@@ -23,14 +23,16 @@
 
 <h4>Select the poster</h4>
 <app-input-img [urlCurrentImage]="model?.poster" (onImageSelected)="onImageSelected($event)"></app-input-img>
+
+
 <h4>Summary</h4>
-<app-input-markdown [markdownContent]="model?.summary" (changeMarkdown)="changeMarkdown($event)"></app-input-markdown>
+<app-input-markdown [markdownContent]="model?.summary" [label]="'Summary'" (changeMarkdown)="changeMarkdown($event)"></app-input-markdown>
 <h4>Select Genre</h4>
 <app-multiple-selector [NonSelectedItems]="nonSelectedGenres" [SelectedItems]="selectedGenres"> </app-multiple-selector>
 <h4>Select Movie Theaters</h4>
 <app-multiple-selector [NonSelectedItems]="nonSelectedMovieTheaters" [SelectedItems]="selectedMovieTheaters"> </app-multiple-selector>
 <h4>Select the Actors</h4>
-<app-actors-autocomplete></app-actors-autocomplete>
+<app-actors-autocomplete [selectedActors]="selectedActors"></app-actors-autocomplete>
 <div>
     <button mat-flat-button color="primary" [disabled]="form.invalid">Save Changes</button>
     <a mat-stroked-button routerLink="/movies" ></a>
