--- a/src/app/movies/movies-list/movies-list.component.css
+++ b/src/app/movies/movies-list/movies-list.component.css
@@ -3,7 +3,7 @@
     margin-bottom: 10px;
     text-align: center;
     }
-    
+
     .movies-container{
         display: flex;
         flex-direction: row;
@@ -25,4 +25,8 @@
 
     button{
         margin-left: 1em;
+    }
+    a{
+     text-decoration: none;
+     color: black;
     }
