--- a/src/app/movies/movies-list/movies-list.component.html
+++ b/src/app/movies/movies-list/movies-list.component.html
@@ -1,23 +1,35 @@
 <app-generic-list [list]="movies">
       <ng-container content>
           <div class="movies-container">
-            <div *ngFor="let movie of movies;let index=index" class="movie-container"> 
-             <a>
-                 <img src="movie.poster" alt="poster"/>
+            <div *ngFor="let movie of movies;let index=index" class="movie-container">
+             <a [routerLink]="'/movie/' + movie.id">
+                 <img [src]="movie.poster" alt="Poster"/>
              </a>
              <p>
-                 <a>{{movie.title}}</a>
+                 <a [routerLink]="'/movie/' + movie.id">{{movie.title}}</a>
              </p>
              <div>
-                 <a mat-flat-button color="primary">Edit</a>
-                 <button mat-flat-button color="warn" type="button">
-                    Delete
-                 </button>
-             </div>
+              <app-authorize-view [role]="'admin'">
+                <ng-container authorized>
+                  <a mat-flat-button color="primary">Edit</a>
+                  <button [routerLink]="'/movies/edit' + movie.id" mat-flat-button
+                  color = "warn"
+                  type = "button"
+                  [swal] = "{title: 'Confirmation',
+                      text: 'Are you sure you want to delete the record?',
+                      showCancelButton: true} "
+                      (confirm) = "delete(movie.id)"
+          >
+                     Delete
+                  </button>
+                </ng-container>
+              </app-authorize-view>
+
+               </div>
               </div>
-    
+
           </div>
-             
+
     </ng-container>
 </app-generic-list>
 
