--- a/src/app/utilities/input-markdown/input-markdown.component.html
+++ b/src/app/utilities/input-markdown/input-markdown.component.html
@@ -1,11 +1,11 @@
 <mat-tab-group>
     <mat-tab label="Edit">
         <mat-form-field (change)="changeMarkdown.emit($any($event.target).value)">
-            <mat-label>Biography</mat-label>
+            <mat-label>{{label}}</mat-label>
             <textarea [(ngModel)]="markdownContent" matInput></textarea>
         </mat-form-field>
     </mat-tab>
     <mat-tab label="Preview">
         <markdown [data]="markdownContent" ngPreserveWhitespaces></markdown>
     </mat-tab>
-</mat-tab-group> 
+</mat-tab-group>
